# NPEET

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  test.py
npeet/: entropy_estimators.py
tests/: test_npeet.py
