[tool.poetry]
name = "npeet"
version = "1.1.0"
description = ""
authors = ["Greg Ver Steeg <gregv@isi.edu>, Simon Streicher <streichersj@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
scipy = "^1.7.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"
pre-commit = "^2.14.0"
pytest = "^6.2.4"
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
