[tool.poetry]
name = "NPEET"
version = "1.0.1"
description = "Non-parametric Entropy Estimation Toolbox"
authors = [
  "Greg Ver Steeg <greg@isi.edu>",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = ">=1.7.1"
scikit-learn = ">=1.0.2"

[tool.poetry.dev-dependencies]
isort = ">=5.9.3"
pre-commit = ">=2.14.0"
pytest = ">=6.2.4"
pylint = ">=2.10.2"
black = ">=22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"