[tool.poetry]
name = "npeet"
version = "1.1.0"
description = "Non-parametric Entropy Estimation Toolbox"
authors = [
    "Greg Ver Steeg <gregv@isi.edu>",
    "Simon Streicher <streichersj@gmail.com>"
]
packages = [
    {include = "npeet"}
]


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = ">=1.7.1"
scikit-learn = ">=1.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.14.0"

[tool.poetry.group.lint.dependencies]
pylint = ">=2.10.2"
isort = ">=5.9.3"
black = ">=22.3.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.1.1"

[tool.poetry.group.hint.dependencies]
mypy = ">=0.991"
pandas-stubs = ">=1.5.1.221024"
types-requests = ">=2.28.11.5"
types-simplejson = ">=3.18.0.0"
types-tqdm = ">=4.64.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/app"

[tool.pytest.ini_options]
testpaths = [
    "test"
]
asyncio_mode = "strict"
